--- a/index.ipynb
+++ b/index.ipynb
@@ -192,7 +192,7 @@
    "outputs": [],
    "source": [
     "def favorite_destination():\n",
-    "    travel_destinations.append()\n",
+    "    travel_destinations.append('madagascar')\n",
     "    return 'madagascar'\n",
     "\n",
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
