Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -220,14 +220,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for travel_destination in travel_destinations:\n",
-    "        travel_destination.title()"
+    "        travel_destination.title()\n",
+    "    return"
    ]
   },
   {
