--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
     "def capitalize_countries():\n",
     "    for travel_destination in travel_destinations:\n",
     "        travel_destination.title()\n",
-    "    return"
+    "    return travel_destinations"
    ]
   },
   {
