--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for travel_destination in travel_destinations:\n",
-    "        travel_destination.title()\n",
+    "        travel_travel_destination.title()\n",
     "    return travel_destinations"
    ]
   },
