--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capital_destinations\n",
+    "    capital_destinations = []\n",
     "    for travel_destination in travel_destinations:\n",
     "        travel_destination = travel_destination.title()\n",
     "    return travel_destinations"
