Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,7 @@
     "def capitalize_countries():\n",
     "    capital_destinations = []\n",
     "    for travel_destination in travel_destinations:\n",
-    "        travel_destination = travel_destination.title()\n",
+    "        capital_destinations[travel_de] = travel_destination.title()\n",
     "    return travel_destinations"
    ]
   },
