Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -228,8 +228,8 @@
     "def capitalize_countries():\n",
     "    capital_destinations = []\n",
     "    for travel_destination in travel_destinations:\n",
-    "        capital_destinations[travel_de] = travel_destination.title()\n",
-    "    return travel_destinations"
+    "        capital_destinations[travel_destination] = travel_destination.title()\n",
+    "    return capital_destinations"
    ]
   },
   {
