--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,7 @@
     "def capitalize_countries():\n",
     "    capital_destinations = []\n",
     "    for travel_destination in travel_destinations:\n",
-    "        capital_destinations[travel_destination] = travel_destination.title()\n",
+    "        travel_destinations[travel_destination] = travel_destination.title()\n",
     "    return capital_destinations"
    ]
   },
