--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capital_destinations = []\n",
-    "    for travel_destination in travel_destinations:\n",
+    "    for travel_destination in range(len(0travel_destinations:\n",
     "        travel_destinations[travel_destination] = travel_destination.title()\n",
     "    return capital_destinations"
    ]
