--- a/index.ipynb
+++ b/index.ipynb
@@ -227,8 +227,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capital_destinations = []\n",
-    "    for travel_destination in list(range(len(travel_destinations))):\n",
-    "        travel_destinations[trav] = travel_destination.title()\n",
+    "    for i in list(range(len(travel_destinations))):\n",
+    "        travel_destinations[i] = travel_destination.title()\n",
     "    return capital_destinations"
    ]
   },
