--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,7 @@
     "\n",
     "def capitalize_countries():\n",
     "    capital_destinations = []\n",
-    "    for travel_destination in list(range(len(travel_destinations))):\n",
+    "    for i in list(range(len(travel_destinations))):\n",
     "        capital_destinations[travel_destination] = travel_destinations[travel_destination].title()\n",
     "    return capital_destinations"
    ]
