--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,7 @@
     "def capitalize_countries():\n",
     "    capital_destinations = []\n",
     "    for i in list(range(len(travel_destinations))):\n",
-    "        \n",
+    "        travel\n",
     "    return capital_destinations"
    ]
   },
